--- a/view/company/company.html
+++ b/view/company/company.html
@@ -6,7 +6,6 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<link rel="stylesheet" href="../../css/mui.min.css">
-		<script src="../../js/mui.min.js"></script>
 
 		<style>
 			.title {
@@ -41,9 +40,9 @@
 				color: darkgrey;
 			}
 			
-			.date {  
+			.date {
 				float: right;
-				width:22%;
+				width: 22%;
 			}
 			
 			.text {
@@ -58,88 +57,89 @@
 
 	<body>
 
-		<div id="pullrefresh" class="mui-content">
-			<ul id="works" class="mui-table-view mui-grid-view">
-				<li id="day_paper" class="mui-table-view-cell mui-media mui-col-xs-3">
-					<a href="#">
-						<img class="mui-media-object" src="../../images/tabbar_log.png">
-						<div id="ribao" class="mui-media-body">日报</div>
-					</a>
-				</li>
-				<li id="week_paper" class="mui-table-view-cell mui-media mui-col-xs-3">
-					<a href="#">
-						<img class="mui-media-object" src="../../images/tabbar_weekly.png">
-						<div id="zhoubao" class="mui-media-body">周报</div>
-					</a>
-				</li>
-				<li id="request" class="mui-table-view-cell mui-media mui-col-xs-3">
-					<a href="#">
-						<img class="mui-media-object" src="../../images/tabbar_timeoff.png">
-						<div id="qingshi" class="mui-media-body">请示</div>
-					</a>
-				</li>
-				<li id="sign" class="mui-table-view-cell mui-media mui-col-xs-3">
-					<a href="#">
-						<img class="mui-media-object" src="../../images/tabbar_attend.png">
-						<div id="qiandao" class="mui-media-body">签到打卡</div>
-					</a>
-				</li>
-				<li id="company_notice" class="mui-table-view-cell mui-media mui-col-xs-3">
-					<a href="#">
-						<img class="mui-media-object" src="../../images/tabbar_audit.png">
-						<div id="gongsigonggao" class="mui-media-body">公司公告</div>
-					</a>
-				</li>
-				<li id="picture" class="mui-table-view-cell mui-media mui-col-xs-3">
-					<a href="#">
-						<img class="mui-media-object" src="../../images/tabbar_image.png">
-						<div id="tupian" class="mui-media-body">图片</div>
-					</a>
-				</li>
-			</ul>
-
-			<div id="gongsiggtext" class="text">公司公告</div>
-
-			<ul id="table" class="mui-table-view">
-				<li class="mui-table-view-cell">
-					<div class="title">2017/5/11 测试</div>
-					<div class="mui-btn-link">
-						已读
-					</div>
-					<p class="mui-ellipsis-2">2017/5/11 测试啊这样真的可以吗，我的天啊，原来是这样啊，啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊倒萨大苏打</p>
-					<div class="date">
-						<p>5月11日</p>
-					</div>
-				</li>
-				<li class="mui-table-view-cell">
-					<div class="title">2017/5/11 测试</div>
-					<div class="mui-btn-link">
-						已读
-					</div>
-					<div class="mui-ellipsis-2">2017/5/11 测试啊这样真的可以吗，我的天啊，原来是这样啊，啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊倒萨大苏打</div>
-					<div class="date">
-						<p>5月11日</p>
-					</div>
-				</li>
-
-			</ul>
-
-			<div id="wenzhang" class="text">
-				文章
-			</div>
-
+		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
+
+				<ul id="works" class="mui-table-view mui-grid-view">
+					<li id="day_paper" class="mui-table-view-cell mui-media mui-col-xs-3">
+						<a href="#">
+							<img class="mui-media-object" src="../../images/tabbar_log.png">
+							<div id="ribao" class="mui-media-body">日报</div>
+						</a>
+					</li>
+					<li id="week_paper" class="mui-table-view-cell mui-media mui-col-xs-3">
+						<a href="#">
+							<img class="mui-media-object" src="../../images/tabbar_weekly.png">
+							<div id="zhoubao" class="mui-media-body">周报</div>
+						</a>
+					</li>
+					<li id="request" class="mui-table-view-cell mui-media mui-col-xs-3">
+						<a href="#">
+							<img class="mui-media-object" src="../../images/tabbar_timeoff.png">
+							<div id="qingshi" class="mui-media-body">请示</div>
+						</a>
+					</li>
+					<li id="sign" class="mui-table-view-cell mui-media mui-col-xs-3">
+						<a href="#">
+							<img class="mui-media-object" src="../../images/tabbar_attend.png">
+							<div id="qiandao" class="mui-media-body">签到打卡</div>
+						</a>
+					</li>
+					<li id="company_notice" class="mui-table-view-cell mui-media mui-col-xs-3">
+						<a href="#">
+							<img class="mui-media-object" src="../../images/tabbar_audit.png">
+							<div id="gongsigonggao" class="mui-media-body">公司公告</div>
+						</a>
+					</li>
+					<li id="picture" class="mui-table-view-cell mui-media mui-col-xs-3">
+						<a href="#">
+							<img class="mui-media-object" src="../../images/tabbar_image.png">
+							<div id="tupian" class="mui-media-body">图片</div>
+						</a>
+					</li>
+				</ul>
+
+				<div id="gongsiggtext" class="text">公司公告</div>
+
+				<ul id="table" class="mui-table-view">
+					<li class="mui-table-view-cell">
+						<div class="title">2017/5/11 测试</div>
+						<div class="mui-btn-link">
+							已读
+						</div>
+						<p class="mui-ellipsis-2">2017/5/11 测试啊这样真的可以吗，我的天啊，原来是这样啊，啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊倒萨大苏打</p>
+						<div class="date">
+							<p>5月11日</p>
+						</div>
+					</li>
+					<li class="mui-table-view-cell">
+						<div class="title">2017/5/11 测试</div>
+						<div class="mui-btn-link">
+							已读
+						</div>
+						<div class="mui-ellipsis-2">2017/5/11 测试啊这样真的可以吗，我的天啊，原来是这样啊，啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊倒萨大苏打</div>
+						<div class="date">
+							<p>5月11日</p>
+						</div>
+					</li>
+
+				</ul>
+
+				<div id="wenzhang" class="text">
+					文章
+				</div>
+
 				<ul id="articles" class="mui-table-view">
 
 				</ul>
+
 			</div>
 
 		</div>
-
-		</div>
-	    <script type="text/javascript" src="../../js/jquery-3.2.1.js" ></script>
-		<script type="text/javascript" src="../../js/jquery.i18n.properties-min-1.0.9.js" ></script>
-		<script type="text/javascript" src="../../js/languagemore.js" ></script>
+		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery-3.2.1.js"></script>
+		<script type="text/javascript" src="../../js/jquery.i18n.properties-min-1.0.9.js"></script>
+		<script type="text/javascript" src="../../js/languagemore.js"></script>
 	</body>
 	<script>
 		mui.init({
@@ -242,12 +242,12 @@
 				success: function(data) {
 					mui.toast(data.msg);
 					var result = data.result;
-			//		mui.alert(JSON.stringify(data));
+					//		mui.alert(JSON.stringify(data));
 					var table = document.getElementById('table');
 					table.innerHTML = "";
 					for(var i = 0; i < result.length; i++) {
 						var li = document.createElement('li');
-						li.id=result.id;
+						li.id = result.id;
 						li.className = 'mui-table-view-cell';
 						li.innerHTML = '<div class="title">' + result[i].title + '</div><div class="mui-btn-link">未读	</div>' +
 							'<p class="mui-ellipsis-2">' + result[i].content + '</p>	<div class="date"><p>' + result[i].writetime + '</p></div>';
@@ -259,17 +259,17 @@
 				}
 			})
 		}
-		
+
 		//为公告添加点击事件
-		mui('#table').on('tap','.mui-table-view-cell',function(){
+		mui('#table').on('tap', '.mui-table-view-cell', function() {
 			var cell_id = this.getAttribute('id');
-				mui.openWindow({  
-					id:'company_notice_detail.html',
-					url: 'company_notice_detail.html',
-					extras:{
-						the_id:cell_id
-					}
-				});
+			mui.openWindow({
+				id: 'company_notice_detail.html',
+				url: 'company_notice_detail.html',
+				extras: {
+					the_id: cell_id
+				}
+			});
 		})
 		//为文章添加点击事件
 		mui('#articles').on('tap', '.mui-table-view-cell', function() {
