--- a/view/mine/dynamics_detail.html
+++ b/view/mine/dynamics_detail.html
@@ -166,7 +166,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<span class="mui-icon mui-action-back mui-icon-back mui-badge-primary mui-badge-inverted"><span>返回</span></span>
+			<span class="mui-icon mui-action-back mui-icon-back mui-badge-primary mui-badge-inverted"> </span>
 			<h1 class="mui-title mui-badge-primary mui-badge-inverted">动态详情</h1>
 		</header>
 		<div id="body" class="mui-content">
