--- a/view/mine/mine.html
+++ b/view/mine/mine.html
@@ -115,8 +115,8 @@
 	<script type="text/javascript">
 		mui.init({
 			preloadPages: [{
-				url: 'myDynamics_main.html',
-				id: 'myDynamics_main.html'
+				url: 'myDynamics_sub.html',
+				id: 'myDynamics_sub.html'
 			}]
 		});
 		mui.plusReady(function() {
