--- a/view/dynamics/dynamics.html
+++ b/view/dynamics/dynamics.html
@@ -28,6 +28,9 @@
 				margin: 3px;
 				float: left;;
 			}
+			.logImg{
+				width: 30px;
+			}
 		</style>
 	</head>
 
@@ -36,8 +39,8 @@
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<div id="table">
-				<div class="mui-card">
-					<!--<div class="mui-card-header mui-card-media">
+				<!--<div class="mui-card">
+					<div class="mui-card-header mui-card-media">
 						<img src="../images/logo.png" />
 						<div class="mui-media-body">
 							小M
@@ -55,14 +58,14 @@
 						
 					</div>
 					<div class="mui-card-footer"> 
-						<a id="like" class="mui-card-link"><img class="mui-icon" src="../../images/Assets.xcassets/heart.imageset/heart@2x.png" /> 15
+						<a id="like" class="mui-card-link"><img class="logImg" src="../../images/Assets.xcassets/heart.imageset/heart@2x.png" /> 15
 						</a>
-						<a id="comment" class="mui-card-link"> <img class="mui-icon" src="../../images/Assets.xcassets/comment_fill.imageset/comment_fill@2x.png" /> 15 </a> 
+						<a id="comment" class="mui-card-link"> <img class="logImg" src="../../images/Assets.xcassets/comment_fill.imageset/comment_fill@2x.png" /> 15 </a> 
 					</div>
 					<div class="comment">
 						<div class="commentname">孙宝松:</div><div class="commentcontent"> hhhhhh </div>
-					</div>-->
-				</div>
+					</div>
+				</div>-->
 			</div>
 			</div>
 			
@@ -107,9 +110,9 @@
 			 var name = target.className;
 			 console.log(name);
 			 if(name!='photo'){
-			 	if(name=='mui-icon like'){ 
+			 	if(name=='logImg like'){ 
 			 		like(id);
-			 	}else if(name=='mui-icon comment'){
+			 	}else if(name=='logImg comment'){
 			 		comment(id);
 			 	}else{
 			 		mui.openWindow({
