--- a/view/mine/headImg.html
+++ b/view/mine/headImg.html
@@ -32,7 +32,7 @@
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 id="touxiang" class="mui-title">头像</h1>
-		     <a id="pick" href="#cropper-sheet" class="headImg">更换头像</a>
+		     <a id="pick" href="#cropper-sheet" class="headImg">更换</a>
 		</header>
 		<div class="mui-content">
 		   		<img id="headImg"   data-preview-src="" data-preview-group="1" onerror="imgerror(this)" />
